@@ -1,73 +1,76 @@
 ;;; init-theme.el --- Configure a theme   -*- lexical-binding: t -*-
 
-;; Use one of the default themes.
+;; Use a theme defined by `yet-enable-theme'.
 ;; Note: after `M-x load-theme <new-theme>'
 ;; do `M-x disable-theme <old-theme>'.
-(load-theme 'misterioso t)
 
-(let ((class '((class color) (min-colors 4096)))
-      (modeline-font (concat "Monospace-"
-                             (if (boundp 'yet-font-size)
-                                 yet-font-size "17"))))
-  (custom-theme-set-faces
-   'misterioso
-   `(cursor ((,class (:background "#fff"))))
-   `(header-line
-     ((,class (:foreground "SlateGray3" :background "#354555"))))
-   `(mode-line
-     ((,class
-       (:foreground "SkyBlue2" :background "#455565" :font ,modeline-font))))
-   `(mode-line-buffer-id
-     ((,class (:weight bold :slant italic))))
-   `(mode-line-highlight ((,class (:foreground "SkyBlue3"))))
-   `(mode-line-inactive
-     ((,class
-       (:foreground "SkyBlue4" :background "#304050" :font ,modeline-font))))
-   `(mode-line-emphasis ((,class (:foreground "#74af68"))))
+(when (and (boundp 'yet-enable-theme) yet-enable-theme)
+  (load-theme yet-enable-theme t)
 
-   `(diff-file-header ((,class (:background "#455565"))))
-   `(diff-header ((,class (:background "#304050"))))
-   `(diff-hunk-header ((,class (:background "#3a4a5a"))))
-   `(diff-added ((,class (:background "#334433"))))
-   `(diff-removed ((,class (:background "#443333"))))
-   `(diff-changed ((,class (:background "#444433"))))
-   `(diff-refine-added ((,class (:background "#336633"))))
-   `(diff-refine-removed ((,class (:background "#663333"))))
-   `(diff-refine-changed ((,class (:background "#666633"))))
-   `(diff-hl-change ((,class (:foreground "#666633" :background "#444433"))))
-   `(diff-hl-dired-change
-     ((,class (:foreground "#666633" :background "#2d3743"))))
+  (when (eq yet-enable-theme 'misterioso)
+    (let ((class '((class color) (min-colors 4096)))
+          (modeline-font (concat "Monospace-"
+                                 (if (boundp 'yet-font-size)
+                                     yet-font-size "17"))))
+      (custom-theme-set-faces
+       'misterioso
+       `(cursor ((,class (:background "#fff"))))
+       `(header-line
+         ((,class (:foreground "SlateGray3" :background "#354555"))))
+       `(mode-line
+         ((,class
+           (:foreground "SkyBlue2" :background "#455565" :font ,modeline-font))))
+       `(mode-line-buffer-id
+         ((,class (:weight bold :slant italic))))
+       `(mode-line-highlight ((,class (:foreground "SkyBlue3"))))
+       `(mode-line-inactive
+         ((,class
+           (:foreground "SkyBlue4" :background "#304050" :font ,modeline-font))))
+       `(mode-line-emphasis ((,class (:foreground "#74af68"))))
 
-   `(show-paren-match ((,class (:background "SkyBlue4"))))
-   `(show-paren-mismatch ((,class (:background "#ff4242"))))
+       `(diff-file-header ((,class (:background "#455565"))))
+       `(diff-header ((,class (:background "#304050"))))
+       `(diff-hunk-header ((,class (:background "#3a4a5a"))))
+       `(diff-added ((,class (:background "#334433"))))
+       `(diff-removed ((,class (:background "#443333"))))
+       `(diff-changed ((,class (:background "#444433"))))
+       `(diff-refine-added ((,class (:background "#336633"))))
+       `(diff-refine-removed ((,class (:background "#663333"))))
+       `(diff-refine-changed ((,class (:background "#666633"))))
+       `(diff-hl-change ((,class (:foreground "#666633" :background "#444433"))))
+       `(diff-hl-dired-change
+         ((,class (:foreground "#666633" :background "#2d3743"))))
 
-   `(compilation-error ((,class (:foreground "#ff4242"))))
-   `(compilation-info ((,class (:foreground "#74af68"))))
-   `(compilation-warning ((,class (:foreground "#ffad29"))))
+       `(show-paren-match ((,class (:background "SkyBlue4"))))
+       `(show-paren-mismatch ((,class (:background "#ff4242"))))
 
-   `(line-number ((,class (:foreground "LightSteelBlue4"))))
-   `(line-number-current-line
-     ((,class (:foreground "LightSteelBlue1" :background "#405060")))))
+       `(compilation-error ((,class (:foreground "#ff4242"))))
+       `(compilation-info ((,class (:foreground "#74af68"))))
+       `(compilation-warning ((,class (:foreground "#ffad29"))))
 
-  (when (facep 'bookmark-face)
-    (custom-theme-set-faces
-     'misterioso
-     `(bookmark-face
-       ((,class (:background "#2d3743" :foreground "#ffad29"))))))
+       `(line-number ((,class (:foreground "LightSteelBlue4"))))
+       `(line-number-current-line
+         ((,class (:foreground "LightSteelBlue1" :background "#405060")))))
 
-  (when (facep 'rust-ampersand-face)
-    (custom-theme-set-faces
-     'misterioso
-     `(rust-ampersand-face
-       ((,class (:foreground "#dcdcb4"))))))
+      (when (facep 'bookmark-face)
+        (custom-theme-set-faces
+         'misterioso
+         `(bookmark-face
+           ((,class (:background "#2d3743" :foreground "#ffad29"))))))
 
-  (when (facep 'eglot-highlight-symbol-face)
-    (custom-theme-set-faces
-     'misterioso
-     `(eglot-highlight-symbol-face
-       ((,class (:background "#405060")))))))
+      (when (facep 'rust-ampersand-face)
+        (custom-theme-set-faces
+         'misterioso
+         `(rust-ampersand-face
+           ((,class (:foreground "#dcdcb4"))))))
 
-(enable-theme 'misterioso)
+      (when (facep 'eglot-highlight-symbol-face)
+        (custom-theme-set-faces
+         'misterioso
+         `(eglot-highlight-symbol-face
+           ((,class (:background "#405060"))))))))
+
+  (enable-theme yet-enable-theme))
 
 ;;; *Palette*
 
