@@ -4,7 +4,7 @@
 ;;; See https://debbugs.gnu.org/cgi/bugreport.cgi?bug=50491.
 ;;; These settings can be safely removed from early init file,
 ;;; since they're here only to improve Emacs look during startup.
-(load-theme 'misterioso t)
+;; (load-theme 'misterioso t)
 
 (setq initial-frame-alist
       `((left . 0.0)
